--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongodb": "^6.8.0"
+    "mongodb": "^6.8.0",
+    "xml2js": "^0.6.2"
   }
 }
