--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
+    "mongoose": "^8.5.2",
+    "winston": "^3.13.1",
+    "winston-daily-rotate-file": "^5.0.0",
+    "winston-mongodb": "^5.1.1",
     "xml2js": "^0.6.2"
   }
 }
